docs: add response docs to match info
