# src/controller/matchesController.ts
@@ -5,16 +5,16 @@ import { cacheRoute } from '../util/cacheRoute';
 
 const router = Router();
 
-router.get('/info/:teamId', async (req, res) => {
-  const { teamId } = req.params;
+router.get('/info/:matchId', async (req, res) => {
+  const { matchId } = req.params;
 
-  const key = String(teamId).toLowerCase();
+  const key = String(matchId).toLowerCase();
 
   cacheRoute({
     res,
     key,
     field: "match/info",
-    fetchData: async () => Scraper.getMatchInfo(teamId),
+    fetchData: async () => Scraper.getMatchInfo(matchId),
   });
 });
 
